# Metadepend

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: conststring.hpp  interface.hpp  meta.hpp  os.hpp  property.hpp  signal.hpp  singleton.hpp  singleton_ptr.hpp  socket.hpp  types.hpp
include/rules/: bad_value_except.hpp  validator.hpp
include/traits/: type_convert.hpp  type_infos.hpp
src/: main.cpp  os.cpp
tests/: basic.cpp
